Second Commit - Minor Changes
Add types to parameters in New-AnsibleDirectory
Change Windows/playbook.yml

--- a/Windows/playbook.yml
+++ b/Windows/playbook.yml
@@ -3,5 +3,12 @@
 
   - tasks:
 
-    -name: Install something
-      -win_feature: dns
+    - name: Create PowerShell directory
+      win_file:
+        path: C:\PowerShell
+        state: directory
+
+    - name: Create ReadMe file in PowerShell directory
+      win_file:
+        path: C:\PowerSHell\
+        state: file
